Closed Bug 1889990 Opened 1 year ago Closed 1 year ago

Crash in [@ nsMsgGroupThread::GetChildHdrAt ]

Categories

(MailNews Core :: Backend, defect)

Thunderbird 124
defect

Tracking

(thunderbird_esr115+ fixed, thunderbird125? affected)

RESOLVED FIXED
126 Branch
Tracking Status
thunderbird_esr115 + fixed
thunderbird125 ? affected

People

(Reporter: welpy-cw, Assigned: welpy-cw)

References

(Regression)

Details

(Keywords: crash, regression, Whiteboard: [TM 115.10.+])

Crash Data

Attachments

(1 file)

STR:

  1. Open a message in conversation view.
  2. Sort by Grouped-by-sort
  3. Delete any message.
Status: NEW → ASSIGNED

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/4e7a7b20b2d5
Fix crash in grouped-by-sort synthetic views. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 126 Branch

Thanks. We should definitely take this in a future 115, after it goes through beta. So far it's not high volume, so could potentially wait til 115.11.0

Whiteboard: [TM 115.10.+]

Comment on attachment 9395307 [details]
Bug 1889990 - Fix crash in grouped-by-sort synthetic views. r=#thunderbird-reviewers

[Approval Request Comment]
Regression caused by (bug #): bug 646168
User impact if declined: Application crash when deleting a message in grouped-by-sort conversation view.
Testing completed (on c-c, etc.): c-c and beta
Risk to taking this patch (and alternatives if risky): low

Attachment #9395307 - Flags: approval-comm-esr115?

Comment on attachment 9395307 [details]
Bug 1889990 - Fix crash in grouped-by-sort synthetic views. r=#thunderbird-reviewers

[Triage Comment]
Approved for esr115

Attachment #9395307 - Flags: approval-comm-esr115? → approval-comm-esr115+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: