Bug 1889990 - Fix crash in grouped-by-sort synthetic views. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D206795

--HG--
extra : amend_source : 39ac0b19603a0c8657abc1be11c76bb572bbda45